fix dropdown z-index

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -113,7 +113,7 @@ nav {
   min-width: 160px;
   width: 250px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 2;
 }
 .dopdown-list a {
   color: #fff;
